src/styles/_approach.scss
.approach {
  height: 976px;
  margin-left: 7.5%;
  padding-left: 12.5%;
  padding-right: 0;
  border-radius: 200px 0 0 200px;
  
  display: flex;
  justify-content: space-between;
  
  background-color: $c-mainpink;

  &__content {
    height: 100%;
    display: flex;
    justify-content: center;
  }

  &__article {
    max-width: 360px;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

  &__descr {
    color: #fff;
    font-family: "Poppins-Bold", Arial, Helvetica, sans-serif;
    font-size: 13px;
    letter-spacing: 3px;
    text-transform: uppercase;
    margin-bottom: 16px;
  }

  &__title {
    color: #fff;
    font-family: "Poppins-SemiBold", Arial, Helvetica, sans-serif;
    font-size: 32px;
    margin-bottom: 32px;
  }

  &__text {
    color: #fff;
    position: relative;
    margin-left: 96px;
  }

  &__text:not(:last-child) {
    margin-bottom: 64px;
  }

  &__text::before {
    content: "";
    display: block;
    width: 64px;
    height: 64px;
    position: absolute;
    left: -96px;
    top: 11px;
    background-color: #fff;
    background-position: center;
    background-repeat: no-repeat;
    border-radius: 50%;
  }

  &__text:nth-of-type(1)::before {
    background-image: url(../images/approach/features-item-icon-1.svg);
  }

  &__text:nth-of-type(2)::before {
    background-image: url(../images/approach/features-item-icon-2.svg);
  }
  
  &__text:nth-of-type(3)::before {
    background-image: url(../images/approach/features-item-icon-3.svg);
  }

  &__pic {
    align-self: flex-end;
    width: 53%;
    height: 70%;
  }

  &__img {
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
    border-radius: 200px 0 0;
  }

  @media (max-width: 600px) {
    &__pic {
      display: none;
    }

    &__descr {
      text-align: right;
    }
  }
}

